<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <TextView
        android:id="@+id/order_confirm_input_address"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/white"
        android:clickable="true"
        android:ellipsize="end"
        android:gravity="center_vertical"
        android:lines="1"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:singleLine="true"
        android:text="@string/activity_order_confirm_input_address"
        android:textColor="@color/text_color_black"
        android:textSize="15sp" />

    <RelativeLayout
        android:id="@+id/order_confirm_pay_type_area"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:clickable="true">

        <TextView
            android:id="@+id/order_confirm_pay_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:paddingLeft="16dp"
            android:text="@string/activity_order_confirm_pay"
            android:textColor="@color/text_color_black"
            android:textSize="15sp" />

        <ImageView
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:src="@mipmap/ic_cash_on_delivery" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/order_confirm_remarks_rl"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="1px"
        android:background="@color/white"
        android:clickable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:paddingLeft="16dp"
            android:text="@string/activity_order_confirm_remarks"
            android:textColor="@color/text_color_black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/order_confirm_remarks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:paddingRight="16dp"
            android:text="@string/activity_order_confirm_remarks_hint"
            android:textColor="@color/normal_hint_color"
            android:textSize="15sp" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/order_confirm_receipt_rl"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="1px"
        android:background="@color/white"
        android:clickable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:paddingLeft="16dp"
            android:text="@string/activity_order_confirm_receipt"
            android:textColor="@color/text_color_black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/order_confirm_receipt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:paddingRight="16dp"
            android:text="@string/activity_order_confirm_receipt_hint"
            android:textColor="@color/normal_hint_color"
            android:textSize="15sp" />

    </RelativeLayout>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:background="@android:color/transparent"
        android:gravity="center_vertical"
        android:paddingLeft="16dp"
        android:text="@string/activity_order_confirm_list"
        android:textColor="@color/normal_hint_color"
        android:textSize="15sp" />

</LinearLayout>