<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_dialog">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/dialog_user_photo_title"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/dialog_take_pic"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical"
            android:text="@string/dialog_user_photo_take_pic"
            android:textColor="@color/normal_font_color"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/dialog_pick_pic"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:text="@string/dialog_user_photo_pick_pic"
            android:textColor="@color/normal_font_color"
            android:textSize="18sp" />

    </LinearLayout>

</RelativeLayout>